# ai-alert-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_mcp_tools.py
src/: main.py
src/agents/: analysis.py  frontline_response.py  response_handler.py
src/core/: application.py
src/interfaces/: __init__.py  cli.py
src/tools/: email.py  mcp_client.py  phone.py
src/tools/analysis/: __init__.py  alarm_documentation.py  atlassian_resources.py  content_search.py  event_identification.py  page_retrieval.py  tool_factory.py  troubleshooting_steps.py
src/utilities/: logger.py  strands_model.py
